// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ceramic API Caip10Link test Anchoring works 1`] = `
Object {
  "anchorProof": Object {
    "blockNumber": 1538352000,
    "blockTimestamp": 1538352000,
    "chainId": "inmemory:12345",
    "root": Object {
      "codec": "dag-cbor",
      "hash": Object {
        "data": Array [
          18,
          32,
          29,
          19,
          85,
          241,
          172,
          186,
          146,
          102,
          235,
          28,
          147,
          255,
          142,
          149,
          36,
          158,
          98,
          26,
          187,
          35,
          22,
          29,
          35,
          147,
          83,
          218,
          35,
          157,
          224,
          105,
          108,
          113,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
    "txHash": Object {
      "codec": "eth-tx",
      "hash": Object {
        "data": Array [
          27,
          32,
          24,
          49,
          225,
          228,
          11,
          171,
          49,
          208,
          15,
          26,
          103,
          65,
          213,
          144,
          208,
          238,
          98,
          25,
          53,
          119,
          40,
          180,
          18,
          220,
          137,
          238,
          244,
          57,
          124,
          243,
          123,
          170,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
  },
  "anchorStatus": 3,
  "content": "did:key:z6MkjKeH8SgVAYCvTBoyxx7uRJFGM2a9HUeFwfJfd6ctuA3X",
  "log": Array [
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          166,
          235,
          142,
          131,
          90,
          1,
          182,
          126,
          82,
          26,
          242,
          207,
          201,
          97,
          72,
          167,
          228,
          175,
          219,
          129,
          104,
          56,
          28,
          12,
          155,
          223,
          63,
          0,
          2,
          245,
          242,
          154,
        ],
        "version": 1,
      },
      "type": 0,
    },
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          96,
          40,
          196,
          192,
          229,
          86,
          37,
          91,
          65,
          67,
          34,
          120,
          63,
          242,
          100,
          38,
          145,
          238,
          61,
          105,
          64,
          138,
          61,
          152,
          42,
          193,
          60,
          69,
          173,
          152,
          227,
          118,
        ],
        "version": 1,
      },
      "type": 2,
    },
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          29,
          19,
          85,
          241,
          172,
          186,
          146,
          102,
          235,
          28,
          147,
          255,
          142,
          149,
          36,
          158,
          98,
          26,
          187,
          35,
          22,
          29,
          35,
          147,
          83,
          218,
          35,
          157,
          224,
          105,
          108,
          113,
        ],
        "version": 1,
      },
      "type": 1,
    },
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          43,
          193,
          144,
          146,
          237,
          249,
          64,
          146,
          38,
          62,
          185,
          227,
          143,
          223,
          103,
          166,
          20,
          148,
          113,
          177,
          243,
          123,
          62,
          202,
          43,
          25,
          202,
          252,
          26,
          127,
          159,
          86,
        ],
        "version": 1,
      },
      "type": 2,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "0x0544dCF4Fce959C6C4F3b7530190cb5E1BD67cB1@eip155:1",
    ],
    "family": "caip10-eip155:1",
    "forbidControllerChange": true,
  },
  "signature": 2,
  "type": 1,
}
`;

exports[`Ceramic API Caip10Link test Create and link DID 1`] = `
Object {
  "anchorStatus": 0,
  "content": null,
  "log": Array [
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          79,
          236,
          238,
          19,
          1,
          117,
          28,
          22,
          200,
          46,
          94,
          20,
          23,
          13,
          133,
          15,
          167,
          229,
          173,
          183,
          45,
          213,
          14,
          187,
          247,
          75,
          130,
          81,
          248,
          235,
          83,
          135,
        ],
        "version": 1,
      },
      "type": 0,
    },
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          84,
          141,
          100,
          230,
          13,
          175,
          63,
          1,
          226,
          72,
          253,
          184,
          102,
          9,
          73,
          156,
          229,
          73,
          141,
          6,
          146,
          225,
          244,
          77,
          105,
          205,
          47,
          85,
          199,
          94,
          61,
          19,
        ],
        "version": 1,
      },
      "type": 1,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "0x0544DCf4fcE959C6c4F3b7530190cb5e1Bd67cb7@eip155:1",
    ],
    "family": "caip10-eip155:1",
    "forbidControllerChange": true,
  },
  "next": Object {
    "content": "did:key:z6MkjKeH8SgVAYCvTBoyxx7uRJFGM2a9HUeFwfJfd6ctuA3X",
    "metadata": Object {
      "controllers": Array [
        "0x0544DCf4fcE959C6c4F3b7530190cb5e1Bd67cb7@eip155:1",
      ],
      "family": "caip10-eip155:1",
      "forbidControllerChange": true,
      "lastUpdate": undefined,
    },
  },
  "signature": 2,
  "type": 1,
}
`;

exports[`Ceramic API Caip10Link test Create from valid account id 1`] = `
Object {
  "anchorStatus": 0,
  "content": null,
  "log": Array [
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          203,
          239,
          185,
          33,
          236,
          12,
          196,
          58,
          225,
          198,
          206,
          167,
          134,
          195,
          121,
          211,
          214,
          173,
          39,
          167,
          172,
          197,
          117,
          121,
          155,
          6,
          184,
          254,
          250,
          57,
          229,
          52,
        ],
        "version": 1,
      },
      "type": 0,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "0x0544DcF4fcE959C6C4F3b7530190cB5E1BD67Cb8@eip155:1",
    ],
    "family": "caip10-eip155:1",
    "forbidControllerChange": true,
  },
  "next": Object {
    "content": null,
  },
  "signature": 0,
  "type": 1,
}
`;
